# opcua-to-tangle

./: .gitignore  Cargo.toml  README.md  index.md
.devcontainer/: Dockerfile  devcontainer.json
opcua-sensors-server/: Cargo.toml  README.md  server.conf
opcua-sensors-server/src/: main.rs
opcua-streams-gateway/: Cargo.toml  README.md  server.conf
opcua-streams-gateway/src/: lib.rs  main.rs
opcua-streams-gateway/src/opcua_connectivity/: mod.rs  opcua_client.rs  opcua_server.rs  variables.rs
opcua-streams-gateway/src/tangle_connectivity/: mod.rs  tangle_publisher.rs
opcua-streams-subscriber/: Cargo.toml  README.md  config.json  server.conf
opcua-streams-subscriber/src/: lib.rs  main.rs
opcua-streams-subscriber/src/opcua_connectivity/: mod.rs  opcua_server.rs  variables.rs
opcua-streams-subscriber/src/streams_subscriber/: mod.rs  streams.rs
opcua-streams-types/: Cargo.toml  README.md
opcua-streams-types/src/: config.rs  lib.rs  sensor_data.rs  sensor_type.rs
